--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "@types/react-helmet": "^6.1.11",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-auth-kit": "^2.12.7",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.0"
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^6.24.0",
+    "react-toastify": "^10.0.5",
+    "sweetalert2": "^11.12.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
